refactor(core): add InjectionToken for environment config

--- a/src/app/feature/medication/components/medication-list/medication-list.component.html
+++ b/src/app/feature/medication/components/medication-list/medication-list.component.html
@@ -40,7 +40,7 @@
     <ng-container matColumnDef="operator">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon (click)="updateData(element)" fontIcon="more"></mat-icon>
+       <button mat-icon-button (click)="updateData(element)"> <mat-icon  fontIcon="more_vert"></mat-icon></button>
       </td>
     </ng-container>
 
