--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @use 'assets/styles/common.scss';
 
 body {
+  font-family: Arial, sans-serif !important;
   margin: 0;
   padding: 0;
   font-size: 16px;
